# ExpressNet

./: .gitignore  .gitignore.swp  .nfs000000000659898900000022  .nfs000000000d9f5bff00000029  CommitLog.txt  NOTES.txt  README.md  README.txt  TODO.txt  gitMessage.txt  sim_compile.do  transcript  vivado.jou
hardware/doc/: 1x1_conv.txt  AdaptNet_v1_00_a.docx  AdaptNet_v1_00_a.pptx  CNN Accelerator Implementation Plan.pptx  Drawing1.vsdx  FAS_notes.txt  Thumbs.db  conv_eng_arch.txt  hog implementation plan.pptx  new 1.txt  ~$$AdaptNet_v1_00_a.~vsdx
hardware/ip_viv2019.1/: vivado.jou
hardware/temp/: project_1.xpr
hardware/verilog/: SRL_bit.v  SRL_bus.v  adder_tree.v  address_incrementer.v  awe.vh  awe_weight_distributor.v  awe_weight_table.v  awp.vh  cnn_layer_accel.v  cnn_layer_accel_FAS.txt  cnn_layer_accel_FAS.v  cnn_layer_accel_FAS_vec_mult.v  cnn_layer_accel_awe_dsps.v  cnn_layer_accel_awe_macc.v  cnn_layer_accel_awe_multiply_block.v  cnn_layer_accel_awe_rowbuffers.v  cnn_layer_accel_awe_stride_picker.v  cnn_layer_accel_awe_weight_distributor.v  cnn_layer_accel_awe_weight_table.v  cnn_layer_accel_awp.v  cnn_layer_accel_ce_macc_0.v  cnn_layer_accel_ce_macc_1.v  cnn_layer_accel_defines.vh  cnn_layer_accel_defs.vh  cnn_layer_accel_layer_conv_array.v  cnn_layer_accel_layer_engine.v  cnn_layer_accel_layer_engine_activator.v  cnn_layer_accel_layer_engine_controller.v  cnn_layer_accel_layer_engine_convolver.v  cnn_layer_accel_layer_engine_output_map.v  cnn_layer_accel_layer_engine_pe.v  cnn_layer_accel_layer_engine_pe_top.v  cnn_layer_accel_layer_engine_pooler.v  cnn_layer_accel_macc_DSP.v  cnn_layer_accel_octo.v  cnn_layer_accel_octo_bram_ctrl.v  cnn_layer_accel_prefetch_buffer.v  cnn_layer_accel_quad.v  cnn_layer_accel_quad_bram_ctrl.v  cnn_layer_accel_weight_seq_data_table0.v  (+26 more)
hardware/verilog_2/: SRL_bit.v  awe_dsp_input_mux.v  cnn_layer_accel_awe_rowbuffers.v  cnn_layer_accel_awe_stride_picker.v  cnn_layer_accel_ce_dsps.v  cnn_layer_accel_ce_macc_0.v  cnn_layer_accel_defs.vh  cnn_layer_accel_prefetch_buffer.v  cnn_layer_accel_quad.v  cnn_layer_accel_quad_bram_ctrl.v  cnn_layer_accel_weight_table_top.v  master_if_arbiter_nway.v  sig_ext_bit.v  verilog template.v  xilinx_simple_dual_port_no_change_2_clock_ram.v  xilinx_simple_dual_port_no_change_ram.v  xilinx_true_dual_port_no_change_ram.v
hardware/viv2019.1_proj/: .nfs000000003b91b1bd0000014b  .nfs000000003f281619000009e5  .nfs000000003f28161a000009e4  .nfs000000003f29442500000dc6  .nfs000000003f29442700000dc5  .nfs000000003f585d18000010c0  .nfs000000003f585d19000010bf  README.txt  design.tcl  post_synth_power.rpt  post_synth_power.tcl  readme.txt  vivado.jou  vivado_21568.backup.jou  vivado_21804.backup.jou  vivado_21922.backup.jou  vivado_22047.backup.jou  vivado_22707.backup.jou  vivado_23178.backup.jou  vivado_23446.backup.jou  vivado_24620.backup.jou  vivado_25097.backup.jou  vivado_25338.backup.jou  vivado_25696.backup.jou  vivado_25788.backup.jou  vivado_25868.backup.jou  vivado_31218.backup.jou  vivado_pid23835.str
model/: CMakeLists.txt  TODO.txt  sim_compile.do  startsim.do  transcript  vsim.wlf  wave.do
model/inc/: AWE.hpp  AWEBus.hpp  AWE_if.hpp  AWP.hpp  AWPBus.hpp  AWP_if.hpp  CNN_Layer_Accel.hpp  FAS.hpp  Interconnect.hpp  QUAD.hpp  Quad.hpp  Top.hpp  Top.hppbak  cnn_layer_accel_common.hpp  common.hpp  mem_mng.hpp  mm.hpp
model/matlab/: Convolution.m  CreateLayerParams.m  Process.m  activate.m  main.m
model/python/: calc_savings.py  yolov3_stats.csv
model/src/: AWE.cpp  AWEBus.cpp  AWP.cpp  AWPBus.cpp  CNN_Layer_accel.cpp  FAS.cpp  Interconnect.cpp  QUAD.cpp  Quad.cpp  Top.cpp  cnn_layer_accel_common.cpp  common.cpp  main.cpp
model/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
model/work/@_opt/: _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
model/work/_sc/linux_x86_64_gcc-5.3.0/: AWP.dbs  AWP.o.version  AWPBus.dbs  AWPBus.o.version  CNN_Layer_Accel.dbs  CNN_Layer_Accel.o.version  FAS.dbs  FAS.o.version  Interconnect.dbs  Interconnect.o.version  QUAD.dbs  QUAD.o.version  moduleinfo.sc  moduleinfo.sc.link  systemc.so.version
simulation/: clock_gen.v  image.txt  sol.txt  startsim_0.do  testbench_0.sv  testbench_0.sv.bak  transcript  vsim.wlf  wave.do  wave_0.do
simulation/testbench0/: convolution.txt  convolution_details.txt  debug.txt  kernel.txt  map.txt  map_windows.txt  seq.txt  startsim0.do  startsim_0.do  test_0_wrapper.sv  test_1_wrapper.sv  testbench.sv  testbench_0.sv  transcript  vish_stacktrace.vstf  vsim.wlf  wave.do
simulation/testbench1/: DDR4_ctrl_bridge.sv  DDR4_ctrl_intf.sv  cnl_tb1_defs.svh  cnl_tb1_driver.sv  cnl_tb1_generator.sv  cnl_testbench1.sv  cnn_layer_accel_intf.sv  example_top.sv  kernel.txt  map.txt  seq.txt  seq_value.txt  sim_compile.do  startsim.do  startsim_1.do  tcl_stacktrace.txt  testbench.sv  testbench_1.sv  transcript  vsim.wlf  vsim_stacktrace.vstf  wave.do  wlft0gs9f0  wlft0x1kjv  wlft0zjh04  wlft1a1v6a  wlft1i27ys  wlft1qexgm  wlft1wn3qc  wlft267te6  wlft2ch0va  wlft3d5d7v  wlft3va0ha  wlft43am2c  wlft44jedv  wlft4xr90f  wlft57qb9h  wlft5bxyq0  wlfta4a8b9  wlftaqzmaz  (+35 more)
simulation/testbench2/: sim_compile.do  testbench.sv
simulation/testbench3/: modelsim.ini  sim_compile.do  startsim.do  testbench.sv  testbench.svh  transcript  vsim.wlf  vsim_stacktrace.vstf  wave.do
simulation/work/: _info
software/: CMakeLists.txt
software/include/: cnn_layer_accel.h
software/src/: cnn_layer_accel.cpp
verification/: clock_gen.v  cnn_layer_accel_FAS_intf.sv  cnn_layer_accel_awe_rowbuffers_intf.sv  cnn_layer_accel_quad_intf.sv  cnn_layer_accel_synch_intf.sv  cnn_layer_accel_verif_defs.sv  cnn_layer_accel_verif_defs.svh
verification/scenario0/: cnl_sc0_DUTOutput.sv  cnl_sc0_agent.sv  cnl_sc0_assertion.sv  cnl_sc0_defs.vh  cnl_sc0_driver.sv  cnl_sc0_environment.sv  cnl_sc0_generator.sv  cnl_sc0_monitor.sv  cnl_sc0_scoreboard.sv  cnl_sc0_testbench.sv  errorLog_0.txt  map.txt  map0.txt  map_windows.txt  qry_conv_map.txt  qry_conv_map_0.txt  qry_conv_map_1.txt  qry_conv_map_2.txt  qry_conv_map_3.txt  sol_conv_map.txt  sol_conv_map_0.txt  sol_conv_map_1.txt  transcript  (+4 more)
(+4786 files in other folders)
